[package]
name = "puerh_mind"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mini-redis = "0.4"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "2"

[build-dependencies]
tonic-prost-build = "0.14"