[package]
name = "alcedo_mind"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14"
tonic-reflection = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
mini-redis = "0.4"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "2"
image = "0.25.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "api-24", "tls-rustls", "directml"] }
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"] }

[build-dependencies]
tonic-prost-build = "0.14"
